# MagInkMirror

./: .gitignore  config.toml  pyproject.toml  readme.md
src/maginkmirror/: __main__.py  display.py  layout.py  main.py  scheduler.py
src/maginkmirror/contrib/plugins/clock/: plugin.py
src/maginkmirror/contrib/plugins/notion/: plugin.py
src/maginkmirror/contrib/plugins/pokemon/: plugin.py
src/maginkmirror/contrib/plugins/rss/: plugin.py
src/maginkmirror/contrib/plugins/todoist/: plugin.py
src/maginkmirror/contrib/plugins/weather/: plugin.py
src/maginkmirror/core/: colors.py  config.py  fonts.py  svg.py
src/maginkmirror/display/: base_display_adapter.py  headless_adapter.py  inky_impression_adapter.py  make_adapter.py
src/maginkmirror/plugins/: __init__.py  base_plugin.py  plugin_registry.py
